--- a/.github/workflows/surgesite.yml
+++ b/.github/workflows/surgesite.yml
@@ -29,4 +29,4 @@ jobs:
       run: sudo npm install -g surge
       
     - name: deploying with surge
-      run: surge ./ cold-polish.surge.sh --token {{ 4c450ecdf353329ec1237151122fc5e8 }}
+      run: surge ./ cold-polish.surge.sh --token  4c450ecdf353329ec1237151122fc5e8
